--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
+<center>
+<p style="font-weight: bold; font-size: 17px;">Please login with google email to access</p>
+</center>
