--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,19 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div>
-      <% if current_user %>
-        Signed in as <strong><%= current_user.name %></strong>!
-        <%= link_to "Sign out", signout_path, id: "sign_out" %>
-      <% else %>
-        <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-      <% end %>
-    </div>
+    <div id="page">
+      <div id="header">
+        <div class="headerright">
+          <div class="headerrightrowone">
+            <% if current_user %>
+              Welcome <strong><%= current_user.name %></strong>! | 
+              <%= link_to "Sign out", signout_path, id: "sign_out" %>
+            <% else %>
+               <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     <div>
     <%= yield %>
     </div>
