form styles added

--- a/app/views/vehicle/new.html.erb
+++ b/app/views/vehicle/new.html.erb
@@ -1,35 +1,56 @@
-<form ng-app="myApp" ng-controller="myCtrl">
-    <div>
-        <label>Model Name:</label>
-        <input type="text" id="mname" placeholder="Enter Model Name" ng-model="model_name">
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> 
+        <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script> 
+    </head>
+    <body >
+    <div class="container">
+        <div class="col-sm-8 col-sm-offset-2">
+        <form ng-app="myApp" ng-controller="myCtrl">
+            <div class="form-group">
+                <label>Vehicle Type:</label>
+                <select  class="form-control" ng-model="type">
+                    <option>Please select</option>
+                    <option value="Scooter">Scooter</option>
+                    <option value="Bike">Bike</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Model Name:</label>
+                <input type="text" id="mname" placeholder="Enter Model Name" class="form-control" ng-model="model_name">
+             </div>
+             <div class="form-group">
+                <label>Model Code:</label>
+                <input type="text" id="mcode" placeholder="Enter Model Code" class="form-control" ng-model="model_code">
+            </div>
+            <div class="form-group">
+                <label>Manufacturer:</label>
+                <input type="text" id="manufacturer" class="form-control" placeholder="Enter Manufacturer" ng-model="manufacturer">
+            </div>
+            <div class="form-group">
+                <label>With Battery:</label>
+                <select ng-model="with_battery" class="form-control">
+                <option>Please select</option>
+                <option value="1">Yes</option>
+                <option value="2">No</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>With Tools:</label>
+                <select ng-model="with_tools" class="form-control">
+                <option>Please select</option>
+                <option value="1">Yes</option>
+                <option value="2">No</option>
+                </select>
+            </div>
+            <div class="form-group" class="form-control">
+                <label>Fuel Capacity:</label>
+                <input type="number" id="fuel_capacity" class="form-control" ng-model="fuel_capacity" min="3" max="20">
+            </div>
+            <button type="submit" class="btn btn-primary" ng-click="add()">Submit</button>
+            </form>
+        </div>
     </div>
-    <div>
-        <label>Model Code:</label>
-        <input type="text" id="mcode" placeholder="Enter Model Code" ng-model="model_code">
-    </div>
-    <div>
-        <label>Manufacturer:</label>
-        <input type="text" id="manufacturer" placeholder="Enter Manufacturer" ng-model="manufacturer">
-    </div>
-    <div>
-        <label>With Battery:</label>
-        <select ng-model="with_battery">
-    	<option></option>
-      	<option value="1">Yes</option>
-  		<option value="2">No</option>
-    	</select>
-    </div>
-    <div>
-        <label>With Tools:</label>
-        <select ng-model="with_tools">
-    	<option></option>
-      	<option value="1">Yes</option>
-  		<option value="2">No</option>
-    	</select>
-    </div>
-    <div>
-        <label>Fuel Capacity:</label>
-        <input type="number" id="fuel_capacity" ng-model="fuel_capacity" min="3" max="20">
-    </div>
-    <button type="submit" class="btn" ng-click="add()">Save</button>
-</form>
+    </body>
+</html>
