--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>Google Auth Example App</title>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", 'angular.min'%>
+    <%= javascript_include_tag 'agscript'%>
     <%= csrf_meta_tags %>
   </head>
   <body>
