--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Google Auth Example App</title>
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag    "application", 'bootsrap'%>
     <%= javascript_include_tag "application", 'angular.min'%>
     <%= javascript_include_tag 'agscript'%>
     <%= csrf_meta_tags %>
