Create vehicle added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Google Auth Example App</title>
     <%= stylesheet_link_tag    "application", 'bootsrap'%>
-    <%= javascript_include_tag "application", 'angular.min'%>
+    <%= javascript_include_tag "application", 'angular.min', 'angular-route.min'%>
     <%= javascript_include_tag 'agscript'%>
     <%= csrf_meta_tags %>
   </head>
